# BigClock-VST3

./: CMakeLists.txt  README.md  make.sh
.github/workflows/: linux-build.yml  windows-build.yml
Source/: ClockPluginEditor.cpp  ClockPluginEditor.h  ClockPluginProcessor.cpp  ClockPluginProcessor.h
